compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__add_on_strings.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3048
expression: "\"Hello, \" + \"Jak\""
snapshot_kind: text
---
----- SOURCE CODE
"Hello, " + "Jak"

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:11
  │
1 │ "Hello, " + "Jak"
  │           ^ Use <> instead

The + operator can only be used on Ints.
To join two strings together you can use the <> operator.
